<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame_layout_topPanel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relative_layout_payoutInfo"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@color/md_white_1000"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linear_layout_payout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_betPayoutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_payout_total"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_betPayoutNumeric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="£££"
                android:textSize="16sp" />

        </LinearLayout>


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_more"
            style="@style/CardView.Button"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            card_view:cardBackgroundColor="@color/primaryColour"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/text_view_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/card_view_more"
                android:textColor="@color/md_white_1000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_view_less"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/card_view_less"
                android:textColor="@color/md_white_1000"
                android:textSize="14sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_barcodeInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_white_1000"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/text_view_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/text_view_barcode" />

        <TextView
            android:id="@+id/text_view_betStake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/text_view_barcode"
            android:layout_marginRight="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/text_view_totalStake" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/shadow_length"
        android:background="@drawable/shadow_down" />

</LinearLayout>

