<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tommyfrenchbookmakers.officialapp.fragments.SelectionScreenActivityFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar" />

    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/image_view_frenchsLogo"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerInside"
                android:src="@drawable/frenches_logo_slogan" />

            <TextView
                android:id="@+id/text_view_selectScanningOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_view_select_scanning_option"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linear_layout_ScanningOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:gravity="center">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/appcompat_button_scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_scan"
                    android:textColor="@color/md_white_1000"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/appcompat_button_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_type"
                    android:textColor="@color/md_white_1000"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="Account Services: "
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:gravity="center">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/appcompat_button_reference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Reference"
                    android:textColor="@color/md_white_1000"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/appcompat_button_textBet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Text bet"
                    android:textColor="@color/md_white_1000"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/appcompat_button_below"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="below"
                    android:textColor="@color/md_white_1000"
                    android:textStyle="bold"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/appcompat_button_grow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Grow"
                    android:textColor="@color/md_white_1000"
                    android:textStyle="bold"/>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
